Release 1.0 (in development)
============================

* Support for domains has been added.  A domain is a collection of
  directives and roles that all describe objects belonging together,
  e.g. elements of a programming language.  Builtin domains are
  provided for Python and C objects.

* Support for docutils 0.4 has been removed.

* New more compact doc field syntax is now recognized:
  ``:param type name: description``.

* Added the ``viewcode`` extension.

* Added ``html-collect-pages`` event.

* Sphinx now requires Jinja2 version 2.2 or greater.

* Added ``needs_sphinx`` config value and ``Sphinx.require_sphinx``
  application API function.

* Added single-file HTML builder.

* Added ``tab-width`` option to ``literalinclude`` directive.

* The ``html_sidebars`` config value can now contain patterns as
  keys, and the values can be lists that explicitly select which
  sidebar templates should be rendered.  That means that the builtin
  sidebar contents can be included only selectively.

* ``html_static_path`` can now contain single file entries.

* The new universal config value ``exclude_patterns`` makes the
  old ``unused_docs``, ``exclude_trees`` and ``exclude_dirnames``
  obsolete.

* Remove the deprecated ``exclude_dirs`` config value.

* #129: Wrap toctrees in a div tag with class ``toctree-wrapper``
  in HTML output.

* #280: Autodoc can now document instance attributes assigned in
  ``__init__`` methods.

* Added ``alt`` option to ``graphviz`` extension directives.

* Added Epub builder.

* #309: The ``graphviz`` extension can now output SVG instead of PNG
  images, controlled by the ``graphviz_output_format`` config value.

* #284: All docinfo metadata is now put into the document metadata, not
  just the author.

* Added new HTML theme ``haiku``, inspired by the Haiku OS user guide.

* Added new HTML theme ``nature``.

* Added new HTML theme ``agogo``, created by Andi Albrecht.

* Added new HTML theme ``scrolls``, created by Armin Ronacher.
