@@ -8,6 +8,8 @@ Release 1.0 (in development)
 
 * Support for docutils 0.4 has been removed.
 
+* Added a manual page builder.
+
 * New more compact doc field syntax is now recognized:
   ``:param type name: description``.
 
